--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "12.0.0",
     "@types/react": "16.9.0",
     "@types/react-dom": "16.9.0",
+    "boxicons": "2.0.5",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-scripts": "3.4.1",
@@ -38,6 +39,6 @@
     ]
   },
   "devDependencies": {
-    "prettier": "false2.0.4"
+    "prettier": "2.0.4"
   }
 }
