--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "@testing-library/user-event": "7.1.2",
     "@types/jest": "24.0.0",
     "@types/node": "12.0.0",
-    "@types/react": "16.9.0",
-    "@types/react-dom": "16.9.0",
+    "@types/react": "16.9.41",
+    "@types/react-dom": "16.9.8",
     "boxicons": "2.0.5",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "react": "0.0.0-experimental-7f28234f8",
+    "react-dom": "0.0.0-experimental-7f28234f8",
     "react-scripts": "3.4.1",
     "typescript": "3.7.2"
   },
