--- a/package.json
+++ b/package.json
@@ -19,14 +19,18 @@
     "@testing-library/jest-dom": "5.11.0",
     "@testing-library/react": "10.4.3",
     "@testing-library/user-event": "12.0.11",
+    "@types/classnames": "2.2.10",
     "@types/jest": "26.0.3",
     "@types/node": "14.0.14",
     "@types/react": "16.9.41",
     "@types/react-dom": "16.9.8",
+    "@types/react-router-dom": "5.1.5",
     "boxicons": "2.0.5",
+    "classnames": "2.2.6",
     "firebase": "7.15.5",
     "react": "0.0.0-experimental-7f28234f8",
     "react-dom": "0.0.0-experimental-7f28234f8",
+    "react-router-dom": "5.2.0",
     "react-scripts": "3.4.1",
     "reactfire": "2.0.3",
     "typescript": "3.9.5"
