--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,8 @@ yarn-error.log*
 # project
 src/personalization/*
 !src/personalization/README.md
+src/assets/images/*
+!src/assets/images/README.md
 
 # deploy
 .firebase/
